Set up Nx workspace and update microservices. Integrated swagger-ui-express with support for JSON module imports using custom.d.ts and tsconfig changes. Added custom type assertions for swaggerUi.serve. Updated .gitignore and removed sensitive .env from Git history. Installed CORS, cookie-parser, and modularized routes.

--- a/shoplink/apps/api-gateway/tsconfig.app.json
+++ b/shoplink/apps/api-gateway/tsconfig.app.json
@@ -2,14 +2,19 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "out-tsc/auth-service",
-    "types": ["node","express"],
+    "types": ["node", "express"],
     "rootDir": "../../",
-    "tsBuildInfoFile": "out-tsc/auth-service/tsconfig.app.tsbuildinfo"
+    "tsBuildInfoFile": "out-tsc/auth-service/tsconfig.app.tsbuildinfo",
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.ts",
-    "../../packages/**/**.ts"
-, "../../packages/components/size-selector/index.tsx"  ],
+    "src/**/*.json",
+    "src/custom.d.ts",
+    "../../packages/**/*.ts",
+    "../../packages/components/size-selector/index.tsx"
+  ],
   "exclude": [
     "out-tsc",
     "dist",
