--- a/shoplink/apps/auth-service/tsconfig.app.json
+++ b/shoplink/apps/auth-service/tsconfig.app.json
@@ -7,9 +7,13 @@
     "tsBuildInfoFile": "out-tsc/auth-service/tsconfig.app.tsbuildinfo"
   },
   "include": [
-    "src/**/*.ts",
-    "../../packages/**/**.ts"
-, "../../packages/components/size-selector/index.tsx"  ],
+  "src/**/*.ts",
+  "src/**/*.json",
+  "src/custom.d.ts",
+  "../../packages/**/*.ts",
+  "../../packages/components/size-selector/index.tsx"
+],
+
   "exclude": [
     "out-tsc",
     "dist",
