--- a/shoplink/package.json
+++ b/shoplink/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "npx nx run-many --target=serve --all",
     "auth-docs": "node apps/auth-service/src/swagger.js",
-    "user-ui": "npx nx run-many --target=dev --all --projects=user-ui"
+    "user-ui": "npx nx run-many --target=dev --all --projects=user-ui",
+    "build": "next build",
+    "lint": "eslint ./src",
+    "test": "node ./run-tests.js"
   },
   "private": true,
   "dependencies": {
