--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
+    "stripe": "^18.2.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   },
@@ -66,6 +67,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@types/stripe": "^8.0.417",
     "@types/swagger-ui-express": "^4.1.8",
     "autoprefixer": "10.4.13",
     "esbuild": "^0.19.2",
