--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,7 +9,9 @@
     "importHelpers": true,
     "isolatedModules": true,
     "baseUrl": ".",
-    "lib": ["es2022"],
+    "lib": [
+      "es2022"
+    ],
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "noEmitOnError": true,
@@ -21,7 +23,9 @@
     "strict": true,
     "target": "es2022",
     "paths": {
-      "@packages/*": ["packages/*"]
+      "@packages/*": [
+        "packages/*"
+      ]
     }
   }
 }
