--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "npx nx run-many --target=serve --all",
-    "auth-docs": "node apps/auth-service/src/swagger.js",
-    "user-ui": "npx nx run-many --target=dev --all --projects=user-ui",
-    "build": "next build",
-    "lint": "eslint ./src",
-    "test": "node ./run-tests.js"
-  },
+  "dev": "npx nx run-many --target=serve --all",
+  "auth-docs": "node apps/auth-service/src/swagger.js",
+  "user-ui": "npx nx run-many --target=dev --all --projects=user-ui",
+  "seller-ui": "npx nx run-many --target=dev --all --projects=seller-ui",
+  "build": "next build",
+  "lint": "eslint ./src",
+  "test": "node ./run-tests.js"
+},
   "private": true,
   "dependencies": {
     "@prisma/client": "^6.8.2",
